--- a/Prototypes/2 kvp-web-fom.Prototype.Retrive KVPs/kvp-web-fom.Prototype.Retrive/ClientApp/public/index.html
+++ b/Prototypes/2 kvp-web-fom.Prototype.Retrive KVPs/kvp-web-fom.Prototype.Retrive/ClientApp/public/index.html
@@ -20,7 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>KVP Web Forms Prototype 2 - Retrive KVPs</title>
+    <title>KVP Web Forms Prototype 2 - Retrieve KVPs</title>
   </head>
   <body>
     <noscript>
